[package]
name = "rust-os"
version = "0.1.0"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "rust-os"
test = false
bench = false
